...
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/bg_featured_overlay"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarEventApproval"
            style="@style/AppToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationContentDescription="@string/back"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnApprove"
                        style="@style/AppButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:text="@string/approve" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnReject"
                        style="@style/AppDangerButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:padding="12dp"
...
